# selfconnect-linux

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  LICENSE  PATENT.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: aihangout_live_demo.py  app_control_demo.py  attested_gpu_share.py  cuda_producer_consumer.py  two_agent_task.py
scripts/: test_nonheadless.py
self_connect_linux/: __init__.py  at_spi.py  broker.py  browser.py  container.py  cuda_ipc.py  identity.py  nccl.py  platform.py  provenance.py  pty_agent.py  receipts.py  shm.py  tmux_agent.py  x11_input.py
tests/: test_at_spi.py  test_benchmarks.py  test_broker.py  test_broker_load.py  test_broker_security.py  test_browser.py  test_browser_nonheadless.py  test_container.py  test_cuda_ipc.py  test_identity.py  test_nccl.py  test_platform.py  test_provenance.py  test_pty_agent.py  test_receipts.py  test_shm.py  test_tmux_agent.py  test_x11_input.py
