[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "selfconnect-linux"
version = "0.9.0"
description = "Linux-native SelfConnect agent control layer for DGX Spark — PTY, AF_UNIX, /proc identity, CUDA IPC."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["ai", "automation", "linux", "pty", "agent", "dgx", "nvidia", "cuda"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Hardware",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/rblake2320/selfconnect-linux"
Repository = "https://github.com/rblake2320/selfconnect-linux"
"Windows peer" = "https://github.com/rblake2320/selfconnect-alt"

[tool.hatch.build.targets.wheel]
packages = ["self_connect_linux"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
# Hardware-gated modules (CUDA, X11, NCCL, Docker, AT-SPI) are omitted from
# coverage reporting because their tests require physical hardware not present
# on CI runners. They are exercised on DGX Spark hardware locally.
omit = [
    "self_connect_linux/cuda_ipc.py",
    "self_connect_linux/nccl.py",
    "self_connect_linux/x11_input.py",
    "self_connect_linux/at_spi.py",
    "self_connect_linux/container.py",
]
